PyMaker/datas/object2/RawHTML/i7801/Python_DOC_referPages.escape-sequence-char-as-a-list-string.txt
<div class="post-text" itemprop="text">
<p>Also see the <a href="https://stackoverflow.com/q/11168076/3259619">Why can't I end a raw string with a backslash?</a> and <a href="https://stackoverflow.com/questions/647769/why-cant-pythons-raw-string-literals-end-with-a-single-backslash">Why can't Python's raw string literals end with a single backslash?</a> questions and related answers.</p>
<hr/>
<p>In my Python 2 program I use a lot of literal strings with embedded backslashes. I could use another backslash to escape each of these backslashes (eg: <code>"red\\blue"</code>) or use Python raw strings (eg: <code>r"red\blue"</code>). I have standardised on the raw string method which works well in all cases except one. </p>
<p>If I want to represent a double backslash, I can use <code>r"\\"</code>, but if I try to enter a single backslash literal <code>r"\"</code> Python complains with a syntax error. The obvious workaround is to use <code>"\\"</code> in this case, but <strong>why is the single raw string backslash an error?</strong> <strong>Is this a bug in Python?</strong> <strong>Is there a way to code a single backslash as a raw string?</strong></p>
<p>Example:</p>
<pre><code>&gt;&gt;&gt; r"red\blue"
'red\\blue'
&gt;&gt;&gt; r"\\"
'\\\\'
&gt;&gt;&gt; r"\"
  File "&lt;stdin&gt;", line 1
    r"\"
       ^
SyntaxError: EOL while scanning string literal
&gt;&gt;&gt; 
</code></pre>
<p>I would rather be consistent using raw strings through-out the whole program, and using this <code>"\\"</code> in several places seems like a kludge. Using <code>r"\\"[0]</code> is not any better. I have also considered using a constant <code>BACKSLASH</code> where <code>BACKSLASH = r"\\"[0]</code> at the start of the program. Another kludge.</p>
<p><strong>UPDATE:</strong>
This error also happens when there is an odd number of backslashes at the end of a raw string. The default string scanner that is used interprets the backslash as an escape character, so that the last backslash will escape the ending quote character. It was intended that <code>"</code> and <code>'</code> can be embedded in the string, however the resulting string will still have the backslashes inside as a plain character.</p>
<p>There are several questions related to this issue but none of the answers explains <em>why</em> the single backslash raw string is an error or <em>how</em> to code a single backslash as a raw string:</p>
<p><a href="https://stackoverflow.com/questions/17327202/python-replace-single-backslash-with-double-backslash?s=1|3.0807">python replace single backslash with double backslash</a></p>
<p><a href="https://stackoverflow.com/questions/24278190/cant-print-single-backslash-in-python?s=2|2.4736">can't print '\' (single backslash) in Python</a></p>
<p><a href="https://stackoverflow.com/questions/16673994/python-regex-to-replace-double-backslash-with-single-backslash?s=3|2.4241">Python regex to replace double backslash with single backslash</a></p>
<p><a href="https://stackoverflow.com/questions/14453152/convering-double-backslash-to-single-backslash-in-python-3?s=4|1.8532">Convering double backslash to single backslash in Python 3</a></p>
<p><a href="https://stackoverflow.com/q/11168076/3259619">Why can't I end a raw string with a backslash?</a></p>
<p><a href="https://stackoverflow.com/questions/647769/why-cant-pythons-raw-string-literals-end-with-a-single-backslash">Why can't Python's raw string literals end with a single backslash?</a></p>
</div>
<div class="post-text" itemprop="text">
<p>The problem here is simple, the system assumes that the single backslash is for escaping, you are escaping your quote, otherwise you have to escape the escape char. This would happen in any environment that lets a character disable another characters function.</p>
</div>
<span class="comment-copy">because the single backslash acts like an escape char for the following double quotes. Now it consider that there isn't an ending quote.</span>
<span class="comment-copy">The best way I've found of including a single \ in a raw string literal is to use string formatting: <code>r"%s" % "\\"</code> will yield: <code>'\\'</code>.</span>
<span class="comment-copy">@AvinashRaj Thanks for your comment. I am still struggling to understand why a single backslash is not allowed if the 'r' prefix disables the function of the backslash and treats just like any other character. Perhaps the backslash retains some function. Hmmm.</span>
<span class="comment-copy">@CarpetPython The last Q&amp;A you linked to in your question (<a href="http://stackoverflow.com/questions/11168076/why-cant-i-end-a-raw-string-with-a-backslash">Why can't I end a raw string with a backslash?</a>) seems to have your answer. There are still escape sequences with backslashes in raw strings, just less of them. The <code>\"</code> in <code>r"\"</code> is one.</span>
<span class="comment-copy">The duplicate links to the FAQ at <a href="https://docs.python.org/3/faq/design.html#why-can-t-raw-strings-r-strings-end-with-a-backslash" rel="nofollow noreferrer">docs.python.org/3/faq/…</a> though I agree that it is surprising and odd that <code>r'\'</code> doesn't work like you would expect.</span>
<span class="comment-copy">Thanks Zach. In a raw string where the backslash should be just an ordinary character, why does it escape the end quote?</span>
